# global-flood-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  global-flood.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  global-flood.rockspec  global-flood_sdk.lua  global-flood_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  globalflood_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  globalflood_sdk.py  globalflood_types.py  pyproject.toml
py/core/: control.py  error.py  operation.py  result.py
py/entity/: flood_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_flood_direct.py  test_flood_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  make_context.py  make_error.py  make_response.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  transform_request.py
rb/: AGENTS.md  CLAUDE.md  (+7 more)
(+399 files in other folders)
